<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

  <TextView
    android:id="@+id/txt_arduinos"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="40dp"
    android:text="@string/titre_list_arduinos"
    android:textColor="@color/blue"
    android:textSize="20sp" />
  <ListView
    android:id="@+id/ListViewArduinos"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/txt_arduinos"
    android:layout_marginTop="30dp"
    android:background="@color/wheat">
  </ListView>
  <TextView
    android:id="@+id/titre_commande"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/ListViewArduinos"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="30dp"
    android:text="@string/titre_commande"
    android:textColor="@color/blue"
    android:textSize="20sp" />
  <TextView
    android:id="@+id/txt_pin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/titre_commande"
    android:layout_marginTop="30dp"
    android:text="@string/txt_pin"
    android:textSize="20sp" />
  <Spinner
    android:id="@+id/list_pin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignTop="@+id/txt_pin"
    android:layout_toEndOf="@+id/txt_pin"
    android:layout_marginLeft="20dp"
    android:layout_toRightOf="@+id/txt_pin"
    android:choiceMode="singleChoice"
    android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>
    <!--android:spinnerMode="dropdown"-->
  <TextView
    android:id="@+id/erreur_pin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="@color/red"
    android:layout_alignTop="@+id/list_pin"
    android:layout_toEndOf="@+id/list_pin"
    android:layout_marginLeft="20dp"
    android:layout_toRightOf="@+id/list_pin"/>
  <TextView
    android:id="@+id/txt_blink"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/txt_pin"
    android:layout_marginTop="30dp"
    android:text="@string/txt_blink"
    android:textSize="20sp" />
  <EditText
    android:id="@+id/edt_blink"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/txt_blink"
    android:layout_alignBottom="@+id/txt_blink"
    android:layout_marginLeft="20dp"
    android:layout_toRightOf="@+id/txt_blink"
    android:ems="10"
    android:hint="@string/hint_blink"
    android:inputType="numberDecimal" />
  <TextView
    android:id="@+id/erreur_hint_blink"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="@color/red"
    android:layout_alignTop="@+id/edt_blink"
    android:layout_toEndOf="@+id/edt_blink"
    android:layout_marginLeft="20dp"
    android:layout_toRightOf="@+id/edt_blink"/>
  <TextView
    android:id="@+id/txt_blink_speed"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/txt_blink"
    android:layout_marginTop="30dp"
    android:text="@string/txt_blink_speed"
    android:textSize="20sp" />
  <EditText
    android:id="@+id/edt_blink_speed"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/txt_blink_speed"
    android:layout_alignBottom="@+id/txt_blink_speed"
    android:layout_marginLeft="20dp"
    android:layout_toRightOf="@+id/txt_blink_speed"
    android:ems="10"
    android:hint="@string/hint_blink_speed"
    android:inputType="numberDecimal" />
  <TextView
    android:id="@+id/erreur_blink_speed"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="@color/red"
    android:layout_alignTop="@+id/edt_blink_speed"
    android:layout_toEndOf="@+id/edt_blink_speed"
    android:layout_marginLeft="20dp"
    android:layout_toRightOf="@+id/edt_blink_speed"/>
  <Button
    android:id="@+id/btn_Executer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn_Executer"
    android:layout_marginLeft="30dp"
    android:layout_below="@+id/txt_blink_speed"
    android:layout_marginTop="30dp"/>
  <Button
    android:id="@+id/btn_annuler"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn_annuler"
    android:layout_marginLeft="30dp"
    android:layout_below="@+id/txt_blink_speed"
    android:layout_marginTop="30dp"/>
  <TextView
    android:id="@+id/titre_list_reponces"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_marginEnd="60dp"
    android:layout_marginRight="60dp"
    android:layout_below="@+id/btn_Executer"
    android:layout_marginTop="30dp"
    android:text="@string/titre_list_reponces"
    android:textColor="@color/blue"
    android:textSize="20sp" />
  <ListView
    android:id="@+id/ListCommandsResponse"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/titre_list_reponces"
    android:layout_marginTop="30dp"
    android:background="@color/wheat" android:choiceMode="none">
  </ListView>
</RelativeLayout>
</ScrollView>