<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/RelativeLayout1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
    <TextView
      android:id="@+id/txt_arduinos"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_marginLeft="30dp"
      android:layout_marginTop="40dp"
      android:text="@string/titre_list_arduinos"
      android:textColor="@color/blue"
      android:textSize="20sp" />
    <ListView
      android:id="@+id/ListViewArduinos"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/txt_arduinos"
      android:layout_marginTop="30dp"
      android:background="@color/wheat">
    </ListView>
    <TextView
      android:id="@+id/titre_commande"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/ListViewArduinos"
      android:layout_marginTop="30dp"
      android:layout_marginLeft="30dp"
      android:text="@string/titre_commande"
      android:textColor="@color/blue"
      android:textSize="20sp" />
    <TextView
      android:id="@+id/txt_pin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/titre_commande"
      android:layout_marginTop="30dp"
      android:text="@string/txt_pin"
      android:textSize="20sp" />
    <Spinner
      android:id="@+id/list_pin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/txt_pin"
      android:layout_toEndOf="@+id/txt_pin"
      android:layout_marginLeft="20dp"
      android:layout_toRightOf="@+id/txt_pin"
      android:choiceMode="singleChoice"
      android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>
    <!--android:spinnerMode="dropdown"-->
    <TextView
      android:id="@+id/erreur_pin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:textColor="@color/red"
      android:layout_alignTop="@+id/list_pin"
      android:layout_toEndOf="@+id/list_pin"
      android:layout_marginLeft="20dp"
      android:layout_toRightOf="@+id/list_pin"/>
    <TextView
      android:id="@+id/txt_mode"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/txt_pin"
      android:layout_marginTop="30dp"
      android:text="@string/txt_mode"
      android:textSize="20sp" />
    <RadioGroup
      android:id="@+id/RadioGroup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/txt_mode"
      android:layout_toEndOf="@+id/txt_mode"
      android:layout_marginLeft="20dp"
      android:layout_toRightOf="@+id/txt_mode"
      android:checkedButton="1"
      android:orientation="horizontal">
      <RadioButton
        android:id="@+id/radio_analogique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_analogique"
        android:layout_marginLeft="20dp"
        android:checked="true"/>
      <RadioButton
        android:id="@+id/radio_binaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_binaire"
        android:layout_marginLeft="5dp"
        android:checked="false"/>
    </RadioGroup>
    <Switch
      android:id="@+id/switch_binaire_val"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/switch_val_to_write"
      android:layout_below="@+id/txt_mode"
      android:layout_marginTop="30dp"
      android:visibility="invisible"
      tools:ignore="NewApi"
      android:checked="false"/>
    <LinearLayout
      android:id="@+id/frame_val_to_write"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txt_mode"
      android:layout_marginTop="30dp"
      android:visibility="visible"
      android:orientation="horizontal">
      <TextView
        android:id="@+id/txt_val_to_write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_val_to_write"
        android:visibility="visible"
        android:textSize="20sp"
        />
      <TextView
        android:id="@+id/analogique_val"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/analogique_val"
        android:textColor="@color/blue"
        android:visibility="visible"
        android:layout_marginLeft="10dp"
        />
      <SeekBar
        android:id="@+id/seekBar_analogique_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_val_to_write"
        android:max="255"
        android:visibility="visible"
        android:layout_marginLeft="5dp"
        />
    </LinearLayout >
    <Button
      android:id="@+id/btn_Executer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_Executer"
      android:layout_marginTop="20dp"
      android:layout_below="@+id/switch_binaire_val"
      android:layout_alignLeft="@+id/titre_commande"/>
    <Button
      android:id="@+id/btn_annuler"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_Executer"
      android:layout_marginTop="20dp"
      android:layout_below="@+id/switch_binaire_val"
      android:layout_alignLeft="@+id/titre_commande"/>
    <TextView
      android:id="@+id/titre_list_reponces"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_marginRight="60dp"
      android:layout_below="@+id/btn_Executer"
      android:layout_marginTop="30dp"
      android:text="@string/titre_list_reponces"
      android:textColor="@color/blue"
      android:textSize="20sp" />
    <ListView
      android:id="@+id/ListCommandsResponse"
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/titre_list_reponces"
      android:layout_marginTop="30dp"
      android:background="@color/wheat">
    </ListView>
  </RelativeLayout>
</ScrollView>