<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
  <TextView
    android:id="@+id/txt_arduinos"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="40dp"
    android:text="@string/titre_list_arduinos"
    android:textColor="@color/blue"
    android:textSize="20sp" />
  <ListView
    android:id="@+id/ListViewArduinos"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/txt_arduinos"
    android:layout_marginTop="30dp"
    android:background="@color/wheat">
  </ListView>
  <TextView
    android:id="@+id/titre_commande_json"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/ListViewArduinos"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="30dp"
    android:text="@string/titre_commande_json"
    android:textColor="@color/blue"
    android:textSize="20sp" />

  <EditText
    android:id="@+id/editText_json_comande"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text='{"id":"1","pa":{"pin":"8","dur":"100","nb":"10"},"ac":"cl"}'
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/titre_commande_json"
    android:layout_marginTop="30dp"/>
  <TextView
    android:id="@+id/erreur_json_comande"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="@color/red"
    android:layout_below="@+id/editText_json_comande"
    android:layout_alignLeft="@+id/titre_commande_json"/>
  <Button
    android:id="@+id/btn_Executer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn_Executer"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/erreur_json_comande"
    android:layout_alignLeft="@+id/erreur_json_comande"/>
  <Button
  android:id="@+id/btn_annuler"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/btn_annuler"
  android:layout_marginTop="20dp"
  android:layout_below="@+id/erreur_json_comande"
  android:layout_alignLeft="@+id/erreur_json_comande"/>
  <TextView
    android:id="@+id/titre_list_reponces"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_marginRight="60dp"
    android:layout_below="@+id/btn_Executer"
    android:layout_marginTop="30dp"
    android:text="@string/titre_list_reponces"
    android:textColor="@color/blue"
    android:textSize="20sp" />
  <ListView
    android:id="@+id/ListCommandsResponse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/titre_list_reponces"
    android:layout_marginTop="30dp"
    android:background="@color/wheat">
  </ListView>

</RelativeLayout>
